ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - host: westillusemaster.com
    secretname: certfilename
  rules:
  - host: westillusemaster.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: quark
            port:
              number: 80
